<resources>
    <string name="app_name">Gerenciamento de Convidados</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="configs">Configurações</string>
    <string name="ausentes">Ausentes</string>
    <string name="presentes">Presentes</string>
    <string name="todos">Todos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="nao_confirmado">Não confirmado</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="nome_e_obrigatorio">Nome é obrigatório!</string>
    <string name="guest_saved_with_success">Convidado foi salvo com sucesso!</string>
    <string name="error_saving_guest">Ops! Erro ao salvar</string>
    <string name="remocao_convidado">Remoção de Convidado</string>
    <string name="total">Total</string>
    <string name="guest_removed">Convidado removido com sucesso!</string>
    <string name="document">Documento</string>
    <string name="gerenciamento_de_convidados">Gerenciamento de convidados</string>
    <string name="confirmation">Confirmação</string>
    <string name="cpf">418.211.683.94</string>
    <string name="eloa_name">Eloá Vitória</string>
</resources>
