<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_general_padding"
    tools:context=".views.GuestFormActivity">

    <TextView
        style="@style/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>
    
    <EditText
        android:id="@+id/edit_name"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        style="@style/textLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/document"/>

    <EditText
        android:id="@+id/edit_document"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"/>

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@style/textLabel"
     android:layout_marginTop="30dp"
     android:text="@string/confirmation"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_not_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nao_confirmado"/>
        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presente"
            android:textColor="@color/colorTextPresent"/>
        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ausente"
            android:textColor="@color/colorTextAbsent"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="80dp"
        android:padding="20dp"
        android:background="@drawable/round_btn_linear_green"
        android:textStyle="bold"
        android:textColor="@color/colorTextButton"/>

</LinearLayout>